--- a/css/stylersterdekat.css
+++ b/css/stylersterdekat.css
@@ -150,7 +150,7 @@ label{
 #content{
     color: #0e244e;
     width: 100%;
-    height: 1000px;
+    height: 800px;
     background-color: #ffc824;
     background-repeat: no-repeat;
     background-size: 100%;
@@ -227,6 +227,12 @@ label{
 .two li a{
     text-decoration: none;
     color: rgb(50, 47, 231);
+}
+.two button{
+    width: 100px;
+    height: 25px;
+    float: right;
+    margin-right: 25px;
 }
 .cardrs .two h3{
     margin: 10px;
@@ -543,7 +549,7 @@ label{
         background-color: rgb(255, 255, 255);
         background-repeat: no-repeat;
         background-size: 100%;
-        background-image: url(../image/background\ 1.png);
+        background-image: url(../image/Dimana\ Rumah\ Sakit.png);
         /* ini adalah tempat letaknya background */
         text-align: center;
     }
@@ -671,7 +677,7 @@ label{
     #content{
         color: #0e244e;
         width: 100%;
-        height: 600px;
+        height: 2000px;
         background-color: #ffc824;
         background-repeat: no-repeat;
         background-size: 100%;
@@ -724,5 +730,8 @@ label{
     }
     .logosnapan{
         width: 7%;
+    }
+    .two{
+        margin-top: 20px;
     }
 }
